# poly-merger

./: .gitignore  Doxyfile  pop-doc
code/: CMakeLists.txt  clean_cmake_files.sh
code/program/: CMakeLists.txt
code/program/include/: BoundingRectangle.h  Converter.h  Point.h  PolyMerger.h  Polygon.h  PolygonMerger.h  docSample.h
code/program/src/: CMakeLists.txt
code/program/src/core/: CMakeLists.txt  PolygonMerger.cpp
code/program/src/geometry/: BoundingRectangle.cpp  CMakeLists.txt  Point.cpp  Polygon.cpp
code/program/src/utilities/: CMakeLists.txt  Converter.cpp
code/test/: CMakeLists.txt
code/test/include/: BoundingRectangleTest.h  Converter.h  ConverterTest.h  GeoHandler.h  PointTest.h  PolygonMergerTest.h  PolygonTest.h
code/test/src/: CMakeLists.txt
code/test/src/app/: CMakeLists.txt  test_runner.cpp
code/test/src/core/: CMakeLists.txt  PolygonMergerTest.cpp
code/test/src/geometry/: BoundingRectangle.cpp  BoundingRectangleTest.cpp  CMakeLists.txt  PointTest.cpp  PolygonTest.cpp
code/test/src/utilies/: CMakeLists.txt
code/test/src/utilities/: CMakeLists.txt  ConverterTest.cpp
doc-src/: mainpage.dox
src-doc/: mainpage.dox  page-inputformat.dox  page-wip.dox
